--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,15 @@
     <title>Great Plains Partners</title>
   </head>
   <body>
+
+    <form name="gpp_contact_form" netlify netlify-honeypot="bot-field" hidden>        
+      <input type="text" name="first_name" id="" />
+      <input type="text" name="last_name" id="" />
+      <input type="email" name="email" id=""/>
+      <input type="text" name="subject" id="" />
+      <textarea name="message" id="" cols="40" rows="4"></textarea>
+    </form>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
